--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ openpyxl
 pandas~=2.0.3
 tqdm~=4.65.0
 spacy
+fr_core_news_sm @https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.6.0/fr_core_news_sm-3.6.0.tar.gz
 
 xlsxwriter
