--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ openpyxl
 pandas~=2.0.3
 tqdm~=4.65.0
 
-spacy[cuda]~=3.6.1
+spacy[cuda-autodetect]
 fr_core_news_sm @https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.6.0/fr_core_news_sm-3.6.0.tar.gz
 fr_core_news_md @https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.6.0/fr_core_news_md-3.6.0.tar.gz
 fr_core_news_lg @https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-3.6.0/fr_core_news_lg-3.6.0.tar.gz
